--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "react-step-sequencer",
+  "name": "mini-pop",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "framer-motion": "^2.9.4",
     "gh-pages": "^2.0.1",
     "lodash": "^4.17.13",
     "react": "^16.8.6",
@@ -15,7 +16,7 @@
     "tone": "^13.4.9"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "CI= react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
