working on sequencer

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Step Sequencer",
-  "name": "React Step Sequencer",
+  "short_name": "Mini-Pop",
+  "name": "Mini-Pop",
   "icons": [
     {
       "src": "logo.png",
